# exemplary

./: .coveragerc  .flake8  .gitignore  404.html  LICENSE  Makefile  README.md  example_script.py  example_script2.py  index.html  match_thing.py  mkdocs.yml  pyproject.toml  re_learning.py  requirements-dev.txt  setup.cfg  sitemap.xml  something.md  usage.py
.github/workflows/: publish-package.yml  quality-assurance.yml
1_gen_scanner/: index.html
docs/: index.md
examples/: 1_scanner.py  pytest.ini
exemplary/: __main__.py  cli.py  cli_config.py  config.py  exemplary.py  generator.py  processor.py  scanner.py  segment.py
exemplary/processors/: _all_builtins.py  _processor_pool.py  base.py  fence.py  md.py  python.py
scripts/bumpversion/: bumpversion.py  requirements.txt
search/: search_index.json
tests/: test_scanner.py
tests/processors_tests/: test_fence.py  test_markdown.py  test_processor_pool.py
