[metadata]
name = exemplary
description = exemplary
python_requires = >=3.8, <4

[options]
install_requires =
	pyyaml
	pydantic
	click
	rich
	rich_click

packages = find:

[options.packages.find]
include =
	exemplary
	exemplary.*

[options.entry_points]
console_scripts =
	exemplary = exemplary.cli:cli
