[metadata]
name = python-exemplary

author = Shacham Ginat
author_email = shacham6@gmail.com
description = Embed your documentation inside runnable examples
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/shacham6/exemplary
license = MIT license
classifiers =
    Programming Language :: Python :: 3

python_requires = >=3.8, <4

[options]
install_requires =
	pyyaml
	pydantic
	click
	rich
	rich_click

packages = find:

[options.package_data]
* = py.typed

[options.packages.find]
include =
	exemplary
	exemplary.*

[options.entry_points]
console_scripts =
	exemplary = exemplary.cli:cli
